# Statistical-inference-for-Linear-Stochastic-Approximation-with-Richardson-Romberg-extrapolation

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  entities.json  main.typ  mempalace.yaml  presentation.typ
.claude/: settings.local.json
code/: README.md  bn_sweep.csv  plot_lugsail_decomposition.py  pyproject.toml  results_comparison.csv  run_bn_sweep.py  run_comparison.py  run_lugsail_bias_variance.py  run_lugsail_decomposition.py
code/docs/: code_explanation.md  huo2023_experiment_spec.md  samsonov2025_experiment_spec.md
code/lsa_inference/: inference.py  lsa_engine.py  lsa_problem.py  markov_chain.py
code/results/: baseline.csv  big_alphas.csv  big_alphas_worse_cond.csv  lugsail_decomp_lab.csv  lugsail_decomp_local.csv  lugsail_lab_const_rr.csv  lugsail_lab_const_rr_agg.csv  lugsail_lab_pr.csv  lugsail_lab_pr_agg.csv  lugsail_local_Tscale.csv  lugsail_local_Tscale_agg.csv  lugsail_local_const_rr.csv  lugsail_local_const_rr_agg.csv  lugsail_local_hard.csv  lugsail_local_hard_agg.csv  lugsail_local_pr.csv  lugsail_local_pr_agg.csv  more_noise.csv  worse_conditioning.csv
conversations/: 2026-05-01_BE-plan-for-RR.md  2026-05-01_check-last-iteration.md  2026-05-03_RR-improvement-ideas.md  2026-05-03_thesis-review.md  README.md
reports/: 2026-04-23_lugsail_bias_variance.md  2026-04-23_main_comparison.md
research/: obm_rr_markov_lsa_report.md
src/: constant_asymp.typ  defs.typ  introduction.typ  last_iterate.typ  new_lemma.typ  pr_weights.typ  zeroth_order_rr.typ
summaries/: Flegal_Jones_2010_BM_OBM_SV_summary.md  Huo_2023_summary.md  Levin_2025_summary.md  (+6 more)
