[project]
name = "lsa-inference-comparison"
version = "0.1.0"
description = "Comparing inference strategies for LSA with Markovian noise: batch-mean (Huo 2023) vs MSB/OBM (Samsonov 2025)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.12",
    "pandas>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.60",
]
